--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
                 <li><a href="#services" onclick="closeMobileMenu()">Services</a></li>
                 <li><a href="#about" onclick="closeMobileMenu()">About</a></li>
                 <li><a href="#case-studies" onclick="closeMobileMenu()">Case Studies</a></li>
-                <li><a href="#resume" onclick="closeMobileMenu()">Resume</a></li>
+                <li><a href="#resume" onclick="closeMobileMenu()">Experience</a></li>
                 <li><a href="#contact" onclick="closeMobileMenu()">Contact</a></li>
             </ul>
         </div>
@@ -1577,7 +1577,7 @@
             <div style="text-align: center; margin-top: 40px;">
                 <button onclick="window.open('resume.html', '_blank')"
                     style="background: #0056b3; color: white; border: none; padding: 15px 30px; border-radius: 5px; font-size: 1.1em; font-weight: bold; cursor: pointer; transition: background 0.3s ease;">
-                    📄 Download Full Resume (PDF)
+                    📄 View Full Resume
                 </button>
             </div>
         </div>
