--- a/resume.html
+++ b/resume.html
@@ -918,7 +918,7 @@
                 <div class="job-header">
                     <img src="images/nederlandse_loterij_logo.png" alt="Nederlandse Loterij" class="company-logo">
                     <div>
-                        <h3 class="job-title">Lead Data Engineer & AI Platform Architect</h3>
+                        <h3 class="job-title">Staff Data Engineer & AI Platform Architect</h3>
                         <p class="job-meta">Nederlandse Loterij • September 2020 – September 2024</p>
                     </div>
                 </div>
